--- a/Application/Home/View/Admin/newsEdit.html
+++ b/Application/Home/View/Admin/newsEdit.html
@@ -8,42 +8,53 @@
         <div id="content" class="col-sm-8">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><strong>报  账  列  表</strong></h4>
+                    <h4 class="panel-title"><strong>新  闻  列  表</strong></h4>
                 </div>
 
                 <div class="panel-body">
+                <volist name='data' id='vo'>
                     <form class="form-horizontal" action="{:U('Home/Admin/editNews')}" method='post' enctype="multipart/form-data" >
-
+                        <input type="hidden" name="id" value="{$vo.id}">
                         <div class="form-group">
                             <label for="roomname" class="col-sm-2 control-label">标题:</label>
                             <div class="col-sm-5">
-                                <input type="text" class="form-control" name="title" value="{$data.title}"/>     
+                                <input type="text" class="form-control" name="title" value="{$vo.title}"/>     
                             </div>                          
                         </div>                          
 
                         <div class="form-group">
                             <label for="roomname" class="col-sm-2 control-label">附件:</label>
                             <div class="col-sm-5">
-                                <input type="file" class="form-control" name="attachment" id="attachment"/>     
+                                <input type="file" class="form-control" id="attachment" onchange="handleFile()" >     
+                                <input type='text' value="{$vo.filename}" id='filename'>
                             </div>                          
                         </div>  
 
                         <div class="form-group">
                             <label for="roomname" class="col-sm-2 control-label">内容:</label>
                             <div class="col-sm-5">
-                                <textarea class="form-control" name="content" value="{$data.content}" rows='8'/></textarea>      
+                                <textarea class="form-control" name="content" value="{$vo.content}" rows='8'/>{$vo.content}</textarea>      
                             </div>                          
                         </div>  
                         
                         <div class="form-group">
                             <label class="col-sm-2 control-label"></label>
                             <div class="col-sm-5">
-                                <button type="submit" class="btn btn-success btn-add">添加</button>                               
+                                <button type="submit" class="btn btn-success btn-add">提交</button>                               
                             </div>                          
                         </div>
                     </form>
+                </volist>
                 </div>
             </div>
         </div>
-</block>
+        <script type="text/javascript">
+    function handleFile(){
+        alert('handleFile');
+        var file = document.getElementById('attachment');
+        var filename = document.getElementById('filename');
+        filename.value = file.value;
+    }
+</script>
 
+</block>
