--- a/Application/Home/View/Index/sidebar.html
+++ b/Application/Home/View/Index/sidebar.html
@@ -14,6 +14,7 @@
 					      		<li><a href="{:U('Home/Admin/newsList')}">新闻列表</a></li>
 					      		<li><a href="{:U('Home/Admin/newsAdd')}">添加新闻</a></li>
 					      		<li><a href="{:U('Home/Admin/activityList')}">活动列表</a></li>
+					      		<li><a href="{:U('Home/Admin/activityRead')}">添加活动</a></li>
 					      		<li><a href="{:U('Home/User/userList')}">用户列表</a></li>
 				      		</ul>
 				     	 </div>
