commit whole the Admin

--- a/Application/Home/View/Admin/newsAdd.html
+++ b/Application/Home/View/Admin/newsAdd.html
@@ -1,5 +1,5 @@
 <extend name="Index:base" />
-<block name="title"><title>增加报账</title></block>
+<block name="title"><title>增加新闻</title></block>
 <block name="sidebar">
     <include file="Index:sidebar" />
 </block>
@@ -8,7 +8,7 @@
         <div id="content" class="col-sm-8">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><strong>报  账  列  表</strong></h4>
+                    <h4 class="panel-title"><strong>报  账  新  闻</strong></h4>
                 </div>
 
                 <div class="panel-body">
