--- a/Application/Home/View/Admin/newsRead.html
+++ b/Application/Home/View/Admin/newsRead.html
@@ -8,7 +8,7 @@
 		<div id="content" class="col-sm-8">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4 class="panel-title"><strong>修  改  新  闻</strong></h4>
+					<h4 class="panel-title"><strong>  新  闻</strong></h4>
 				</div>
 
 				<div class="panel-body">
